# gamemaster

./: .gitignore  README.md  api接口设计文档.doc  batch_request.py  manual_zhipu_test.py  mvp_background_task_test.py  my_test_batch.jsonl  pyproject.toml  requirements.txt  simplified_test.jsonl  test_quality_evaluation.py  test_symbols.xlsx  test_tag_protection.py  test_translation.xlsx  test_translation_integration.py  test_translation_service.py  zhipu_batch_test.py  开发指导文档.doc
app/: __init__.py  main.py  models.py
app/core/: config.py
app/routers/: config_api.py  files.py  jobs.py  quality.py
app/services/: file_service.py  tag_protection_service.py  translation_job_service.py  translation_quality_service.py  translation_service.py  zhipu_ai_service.py
