[tool.pdm]

[tool.pdm.dev-dependencies]
pytest = ">=8.2.0"

[project]
name = "ai-translator"
version = "0.1.0"
description = "AI Game Localization File Translation Tool"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "python-multipart>=0.0.9",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend" 